--- a/blog.html
+++ b/blog.html
@@ -25,5 +25,13 @@
         <p>&copy; 2024 NBA Predictor IA. Todos los derechos reservados.</p>
     </footer>
     <script src="js/scripts.js"></script>
+
+        <!-- index.html -->
+<h2>Últimas Entradas del Blog</h2>
+<ul>
+    <li><a href="blog/blog1.html">Análisis de la Temporada NBA 2024-2025</a></li>
+    <li><a href="blog/blog2.html">Predicciones para los Playoffs</a></li>
+</ul>
+    
 </body>
 </html>
