--- a/blog.html
+++ b/blog.html
@@ -29,8 +29,8 @@
         <!-- index.html -->
 <h2>Últimas Entradas del Blog</h2>
 <ul>
-    <li><a href="blog/blog1.html">Análisis de la Temporada NBA 2024-2025</a></li>
-    <li><a href="blog/blog2.html">Predicciones para los Playoffs</a></li>
+    <li><a href="blogs/blog1.html">Análisis de la Temporada NBA 2024-2025</a></li>
+    <li><a href="blogs/blog2.html">Predicciones para los Playoffs</a></li>
 </ul>
     
 </body>
