--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <h1>Bienvenido a NBA Predictor IA</h1>
         <p>Analiza estadísticas y resultados en tiempo real de la NBA para obtener predicciones detalladas.</p>
         <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=qdhpfg03sGM" allowfullscreen></iframe>
+            --<iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=qdhpfg03sGM" allowfullscreen></iframe>
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/qdhpfg03sGM?si=2EGF1PUMOQzGYCMz" allowfullscreen></iframe>
         </div>
     </div>
     <footer class="text-center mt-5">
