--- a/blog.html
+++ b/blog.html
@@ -29,6 +29,11 @@
             <a href="#">Leer más</a>
         </article>
     </div>
+
+    <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+               
+            </ul>
     
     <footer>
         &copy; 2024 Mi Blog de NBA Predictor. Todos los derechos reservados.
