--- a/blog.html
+++ b/blog.html
@@ -19,6 +19,13 @@
             <p>Publicado el 25 de septiembre de 2024</p>
             <p>En este artículo analizaremos el rendimiento de los equipos durante la temporada...</p>
             <a href="#">Leer más</a>
+
+            <h2>Últimas Entradas del Blog</h2>
+<ul>
+    <li><a href="blog/blog1.html">Análisis de la Temporada NBA 2024-2025</a></li>
+    <li><a href="blog/blog2.html">Predicciones para los Playoffs</a></li>
+</ul>
+            
         </article>
         
         <!-- Segunda Entrada de Blog -->
