--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,7 @@
             <h2>Análisis de la Temporada NBA 2024-2025</h2>
             <p>Publicado el 25 de septiembre de 2024</p>
             <p>En este artículo analizaremos el rendimiento de los equipos durante la temporada...</p>
-            <li><a href="blogs/blog1.html">Análisis de la Temporada NBA 2024-2025</a></li>
+            <li><a href="blogs/blog1.html">Leer más</a></li>
 
             <ul>
     
